--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.3",
+    "@mui/material": "^5.8.2",
+    "@mui/utils": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "fast-equals": "^4.0.0",
+    "google-map-react": "^2.1.10",
+    "google-maps-react": "^2.0.6",
+    "html-react-parser": "^1.4.14",
+    "jest": "^28.1.1",
+    "moment": "^2.29.3",
+    "react": "^16.0.0",
+    "react-dom": "^16.14.0",
+    "react-moment": "^1.1.2",
     "react-scripts": "5.0.1",
+    "react-swipeable-views": "^0.14.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
